Get rid of failure
Mostly due to potential API instability (0.1 crate) used a lot in public
API and inherent incompatibility with the rest of the ecosystem. Going
with Box<dyn Error + Send + Sync> instead.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,10 +46,9 @@ color = ["structopt/color"]
 arc-swap = "~0.4"
 config = { version = "~0.9", default-features = false, features = ["toml"], git = "https://github.com/vorner/config-rs", branch = "spirit" }
 either = "~1"
-failure = "~0.1"
+err-context = "~0.1"
 fallible-iterator = "~0.2"
 humantime = "~1"
-itertools = "~0.8"
 libc = "~0.2"
 log = "~0.4"
 serde = { version = "~1", features = ["derive"] }
