--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spirit"
-version = "0.4.1"
+version = "0.4.2"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Helper to create well behaved daemons with runtime-reconfiguration support"
 documentation = "https://docs.rs/spirit"
@@ -30,7 +30,7 @@ members = [
 
 [badges]
 travis-ci = { repository = "vorner/spirit" }
-maintenance = { status = "actively-developed" }
+maintenance = { status = "passively-maintained" }
 
 [features]
 default = ["cfg-help", "json", "yaml", "suggestions", "color"]
@@ -56,7 +56,9 @@ serde_ignored = { version = "~0.1.0" }
 serde_path_to_error = "~0.1"
 signal-hook = "~0.1.8"
 structdoc = { version = "~0.1.3", optional = true }
-structopt = { version = "~0.3", default-features = false }
+# Due to a hack, we are using part of API that doesn't have the proper API guarantees. So make sure cargo update doesn't break stuff.
+# We should solve it eventually somehow. See the StructOptInternal.
+structopt = { version = "=0.3.12", default-features = false }
 toml = "~0.5"
 
 [dev-dependencies]
