--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ config = { version = "~0.10.1", default-features = false, features = ["toml"] }
 either = "~1"
 err-context = "~0.1"
 fallible-iterator = "~0.2"
-humantime = "~1"
+humantime = "~2"
 libc = "~0.2"
 log = "~0.4"
 serde = { version = "~1", features = ["derive"] }
@@ -58,7 +58,7 @@ signal-hook = "~0.1.8"
 structdoc = { version = "~0.1.3", optional = true }
 # Due to a hack, we are using part of API that doesn't have the proper API guarantees. So make sure cargo update doesn't break stuff.
 # We should solve it eventually somehow. See the StructOptInternal.
-structopt = { version = "=0.3.12", default-features = false }
+structopt = { version = ">=0.3.12, <=0.3.15", default-features = false }
 toml = "~0.5"
 
 [dev-dependencies]
@@ -72,7 +72,7 @@ spirit-hyper = { version = "~0.6", path = "spirit-hyper" }
 spirit-log = { version = "~0.3", path = "spirit-log" }
 spirit-tokio = { version = "~0.6", path = "spirit-tokio" }
 structdoc = "~0.1.3"
-version-sync = "~0.8"
+version-sync = "~0.9"
 
 # Tests and building is faster with debug turned off and nobody really run a debugger on the
 # produced binaries here ever. If it is needed, enable temporarily.
