--- a/spirit-reqwest/Cargo.toml
+++ b/spirit-reqwest/Cargo.toml
@@ -37,3 +37,4 @@ url = { version = "~2", features = ["serde"] }
 [dev-dependencies]
 version-sync = "~0.9"
 env_logger = "~0.7"
+tokio = { version = "~0.2", features = ["full"] }
