--- a/spirit-reqwest/Cargo.toml
+++ b/spirit-reqwest/Cargo.toml
@@ -24,11 +24,17 @@ maintenance = { status = "actively-developed" }
 default = ["cfg-help"]
 cfg-help = ["spirit/cfg-help", "structdoc"]
 
+blocking = ["reqwest/blocking"]
+brotli = ["reqwest/brotli"]
+gzip = ["reqwest/gzip"]
+native-tls = ["reqwest/native-tls"]
+
 [dependencies]
 arc-swap = "~0.4"
 err-context = "~0.1"
 log = "~0.4"
-reqwest = { version = "~0.10", features = ["native-tls", "gzip", "brotli", "blocking"] }
+# Yes, depend on default-features. That means default-tls, we don't want to disable so many parts of the code
+reqwest = "~0.10"
 serde = { version = "~1", features = ["derive"] }
 spirit = { version = "~0.4", path = "..", default-features = false }
 structdoc = { version = "~0.1", optional = true }
@@ -38,3 +44,6 @@ url = { version = "~2", features = ["serde"] }
 version-sync = "~0.9"
 env_logger = "~0.7"
 tokio = { version = "~0.2", features = ["full"] }
+
+[package.metadata.docs.rs]
+all-features = true
