--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -25,21 +25,15 @@ travis-ci = { repository = "vorner/spirit" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-either = { version = "~1", optional = true }
 err-context = "~0.1"
-futures = "~0.1"
-humantime = "~2"
 log = "~0.4"
-net2 = "~0.2"
+num_cpus = "~1"
 serde = { version = "~1", features = ["derive"] }
 spirit = { version = "~0.4.0", path = "..", default-features = false }
 structdoc = { version = "~0.1", optional = true }
 structopt = { version = "~0.3", default-features = false }
-tk-listen = "~0.2"
-tokio = "~0.1.8"
+# TODO: Make some/all these features optional (maybe default)?
+tokio = { version = "0.2", default-features = false, features = ["io-driver", "time", "rt-threaded"] }
 
 [dev-dependencies]
-corona = "~0.4.1"
-env_logger = "~0.7"
-serde_json = "~1"
 version-sync = "~0.9"
