--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -47,6 +47,8 @@ default-features = false
 features = ["macros", "rt-core", "sync"]
 
 [dev-dependencies]
+arc-swap = "~0.4"
 version-sync = "~0.9"
 env_logger = "~0.7"
 serde_json = "~1"
+tokio = { version = "~0.2", features = ["io-util"] }
