--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,15 +62,16 @@ structopt = { version = ">=0.3.12, <=0.3.18", default-features = false }
 toml = "~0.5"
 
 [dev-dependencies]
-hyper = "~0.12"
+hyper = "~0.13"
 once_cell = "~1"
 maplit = "~1"
 spirit-cfg-helpers = { version = "~0.3", path = "spirit-cfg-helpers" }
 spirit-daemonize = { version = "~0.3", path = "spirit-daemonize" }
 spirit-hyper = { version = "~0.6", path = "spirit-hyper" }
 spirit-log = { version = "~0.4", path = "spirit-log" }
-spirit-tokio = { version = "~0.6", path = "spirit-tokio" }
+spirit-tokio = { version = "~0.6", path = "spirit-tokio", features = ["rt-from-cfg"] }
 structdoc = "~0.1.3"
+tokio = { version = "0.2", features = ["sync"] }
 version-sync = "~0.9"
 
 # Tests and building is faster with debug turned off and nobody really run a debugger on the
