--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ signal-hook = "~0.1.8"
 structdoc = { version = "~0.1.3", optional = true }
 # Due to a hack, we are using part of API that doesn't have the proper API guarantees. So make sure cargo update doesn't break stuff.
 # We should solve it eventually somehow. See the StructOptInternal.
-structopt = { version = ">=0.3.12, <=0.3.18", default-features = false }
+structopt = { version = "~0.3.12", default-features = false }
 toml = "~0.5"
 
 [dev-dependencies]
