--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spirit"
-version = "0.4.8"
+version = "0.4.9"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Helper to create well behaved daemons with runtime-reconfiguration support"
 documentation = "https://docs.rs/spirit"
@@ -43,7 +43,7 @@ suggestions = ["structopt/suggestions"]
 color = ["structopt/color"]
 
 [dependencies]
-arc-swap = "~0.4"
+arc-swap = "~1"
 config = { version = "~0.10.1", default-features = false, features = ["toml"] }
 either = "~1"
 err-context = "~0.1"
@@ -65,7 +65,7 @@ toml = "~0.5"
 hyper = "~0.13"
 once_cell = "~1"
 maplit = "~1"
-spirit-cfg-helpers = { version = "~0.3", path = "spirit-cfg-helpers" }
+spirit-cfg-helpers = { version = "~0.4", path = "spirit-cfg-helpers" }
 spirit-daemonize = { version = "~0.4", path = "spirit-daemonize" }
 spirit-hyper = { version = "~0.7", path = "spirit-hyper" }
 spirit-log = { version = "~0.4", path = "spirit-log" }
@@ -81,3 +81,6 @@ debug = false
 
 [profile.test]
 debug = false
+
+[package.metadata.docs.rs]
+all-features = true
