--- a/spirit-hyper/Cargo.toml
+++ b/spirit-hyper/Cargo.toml
@@ -38,3 +38,6 @@ tokio = { version = "~0.2", default-features = false, features = ["rt-core"] }
 [dev-dependencies]
 env_logger = "~0.7"
 version-sync = "~0.9"
+
+[package.metadata.docs.rs]
+all-features = true
