--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spirit"
-version = "0.4.13"
+version = "0.4.14"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Helper to create well behaved daemons with runtime-reconfiguration support"
 documentation = "https://docs.rs/spirit"
@@ -66,9 +66,9 @@ hyper = "~0.14"
 once_cell = "~1"
 maplit = "~1"
 spirit-cfg-helpers = { version = "~0.4", path = "spirit-cfg-helpers" }
-spirit-daemonize = { version = "~0.4", path = "spirit-daemonize" }
+spirit-daemonize = { version = "~0.5", path = "spirit-daemonize" }
 spirit-hyper = { version = "~0.8", path = "spirit-hyper" }
-spirit-log = { version = "~0.4", path = "spirit-log" }
+spirit-log = { version = "~0.4", path = "spirit-log", features = ["background"] }
 spirit-tokio = { version = "~0.8", path = "spirit-tokio", features = ["rt-from-cfg"] }
 structdoc = "~0.1.3"
 tokio = { version = "1", features = ["sync"] }
