--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -22,7 +22,7 @@ default = ["cfg-help", "rt-from-cfg", "net", "stream"]
 
 cfg-help = ["spirit/cfg-help", "structdoc"]
 multithreaded = ["tokio/rt-multi-thread"]
-net = ["humantime", "socket2", "tokio/net", "tokio/time"]
+net = ["humantime", "pin-project", "socket2", "tokio/net", "tokio/time"]
 rt-from-cfg = ["multithreaded", "tokio/time", "num_cpus"]
 stream = ["tokio-stream"]
 
@@ -40,6 +40,7 @@ log = "^0.4"
 humantime = { version = "^2", optional = true }
 socket2 = { version = "^0.3", optional = true, features = ["reuseport", "unix"] }
 num_cpus = { version = "^1", optional = true }
+pin-project = { version = "1", optional = true }
 serde = { version = "^1", features = ["derive"] }
 spirit = { version = "^0.4.6", path = "..", default-features = false }
 structdoc = { version = "^0.1", optional = true }
