--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spirit-tokio"
-version = "0.8.1"
+version = "0.9.0"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Tokio helpers for Spirit"
 documentation = "https://docs.rs/spirit-tokio"
@@ -53,3 +53,6 @@ arc-swap = "^1"
 env_logger = "~0.8"
 serde_json = "^1"
 tokio = { version = "^1", features = ["io-util"] }
+
+[package.metadata.docs.rs]
+all-features = true
