--- a/spirit-tokio/Cargo.toml
+++ b/spirit-tokio/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "spirit-tokio"
-version = "0.9.1"
+version = "0.9.2"
 authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
 description = "Tokio helpers for Spirit"
 documentation = "https://docs.rs/spirit-tokio"
@@ -38,7 +38,7 @@ futures-util = { version = "~0.3", optional = true, default-features = false }
 err-context = "^0.1"
 log = "^0.4"
 humantime = { version = "^2", optional = true }
-socket2 = { version = "^0.3", optional = true, features = ["reuseport", "unix"] }
+socket2 = { version = "^0.4", optional = true, features = ["all"] }
 num_cpus = { version = "^1", optional = true }
 pin-project = { version = "1", optional = true }
 serde = { version = "^1", features = ["derive"] }
@@ -50,7 +50,7 @@ tokio-stream = { version = "^0.1", optional = true }
 
 [dev-dependencies]
 arc-swap = "^1"
-env_logger = "~0.8"
+env_logger = "~0.9"
 serde_json = "^1"
 tokio = { version = "^1", features = ["io-util"] }
 
